# warverse-discord-bot

./: .gitignore  Bot.hpp  CMakeLists.txt  README.md  json.hpp  main.cpp
commands/: CMakeLists.txt  Command.cpp  Command.hpp  PingCommand.cpp  PingCommand.hpp
db/: CMakeLists.txt  DBManager.cpp  DBManager.hpp  test.db  test.sqbpro
db/sql/: createFractionsTable.sql  createUsersTable.sql  query.sql  sql_queries.json  test.json
logger/: CMakeLists.txt  Log.cpp
logger/include/: Log.hpp
src/: Bot.cpp  Bot.hpp  CMakeLists.txt  main.cpp
utils/: Common.hpp  Log.hpp  Utils.hpp
utils/stardustvulpine/: Log.hpp  Utils.hpp
